labs/lab23/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: demo
  name: php-app
spec:
  containers:
  - name: app
    image: ttl.sh/${IMAGE_NAME}:24h
    ports:
    - containerPort: 80
    resources:
      requests:
        cpu: 50m
        memory: 64Mi
      limits:
        cpu: 100m
        memory: 64Mi
    livenessProbe:
      httpGet:
        port: 80
      failureThreshold: 5
      periodSeconds: 4
    readinessProbe:
      httpGet:
        port: 80
      failureThreshold: 2
      periodSeconds: 2
