labs/lab23/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-app
spec:
  # can be used to choose specific implementation, leave out to use default ingress
  # nginx (Docker Desktop, minikube) requires 'nginx' specified here
  #ingressClassName: nginx
  rules:
  - host: php-app-student01.t9v.de #adjust for your cluster
    http:
      paths:
      - backend:
          service:
            name: php-app
            port:
              number: 80
        path: /
        pathType: Prefix
# allowed in workshop cluster:
#  tls:
#  - hosts:
#    - php-app-student01.t9v.de
